--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "vue": "latest",
     "vue-router": "latest"
   },
-  "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af"
+  "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af",
+  "devDependencies": {
+    "@antfu/eslint-config": "^4.3.0",
+    "eslint": "^9.20.1",
+    "eslint-plugin-format": "^1.0.1"
+  }
 }
