--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@langchain/community": "^0.3.31",
+    "@langchain/core": "^0.3.40",
+    "@langchain/langgraph": "^0.2.46",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
@@ -18,6 +21,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^4.3.0",
     "eslint": "^9.20.1",
-    "eslint-plugin-format": "^1.0.1"
+    "eslint-plugin-format": "^1.0.1",
+    "langsmith": "^0.3.9"
   }
 }
