--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@langchain/community": "^0.3.31",
     "@langchain/core": "^0.3.40",
     "@langchain/langgraph": "^0.2.46",
+    "@tavily/core": "^0.3.1",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
