--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@langchain/core": "^0.3.40",
     "@langchain/langgraph": "^0.2.46",
     "@tavily/core": "^0.3.1",
+    "consola": "^3.4.0",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
