--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "consola": "^3.4.0",
     "nuxt": "^3.15.4",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.3.0",
