--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@antfu/eslint-config": "^4.3.0",
     "eslint": "^9.20.1",
     "eslint-plugin-format": "^1.0.1",
-    "langsmith": "^0.3.9"
+    "langsmith": "^0.3.9",
+    "nuxi": "^3.21.1"
   }
 }
