--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@langchain/langgraph": "^0.2.46",
     "@tavily/core": "^0.3.1",
     "consola": "^3.4.0",
+    "langchain": "^0.3.19",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest",
