--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@langchain/community": "^0.3.31",
     "@langchain/core": "^0.3.40",
     "@langchain/langgraph": "^0.2.46",
+    "@nuxtjs/tailwindcss": "6.13.1",
     "@tavily/core": "^0.3.1",
     "consola": "^3.4.0",
     "langchain": "^0.3.19",
