--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@langchain/community": "^0.3.31",
     "@langchain/core": "^0.3.40",
     "@langchain/langgraph": "^0.2.46",
+    "@nuxt/ui": "2.21.0",
     "@nuxtjs/tailwindcss": "6.13.1",
     "@tavily/core": "^0.3.1",
     "consola": "^3.4.0",
     "langchain": "^0.3.19",
     "nuxt": "^3.15.4",
+    "tailwindcss": "^3.4.17",
     "uuid": "^11.1.0",
     "vue": "latest",
     "vue-router": "latest",
@@ -27,6 +29,11 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.3.0",
+    "@headlessui/tailwindcss": "^0.2.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "eslint": "^9.20.1",
     "eslint-plugin-format": "^1.0.1",
     "langsmith": "^0.3.10",
