--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@langchain/community": "^0.3.31",
     "@langchain/core": "^0.3.40",
     "@langchain/langgraph": "^0.2.46",
+    "@nuxt/icon": "1.10.3",
     "@nuxt/ui": "2.21.0",
     "@nuxtjs/tailwindcss": "6.13.1",
     "@tavily/core": "^0.3.1",
