--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   // https://nuxt.com/docs/guide/concepts/typescript
   "extends": "./.nuxt/tsconfig.json",
   "includes": [
+    "types/*.d.ts",
     "types/constants.ts"
   ]
 }
