--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxt/ui": "2.21.0",
     "@nuxtjs/tailwindcss": "6.13.1",
     "@tavily/core": "^0.3.1",
+    "@vueuse/nuxt": "12.7.0",
     "consola": "^3.4.0",
     "langchain": "^0.3.19",
     "nuxt": "^3.15.4",
