--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "uuid": "^11.1.0",
     "vue": "latest",
     "vue-router": "latest",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zod-to-json-schema": "^3.24.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.3.0",
