Use code mirror to edit schema

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@ai-sdk/vue": "^1.1.18",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/view": "^6.36.3",
     "@langchain/anthropic": "^0.3.13",
     "@langchain/community": "^0.3.31",
     "@langchain/core": "^0.3.40",
@@ -21,11 +24,13 @@
     "@nuxtjs/color-mode": "3.5.2",
     "@nuxtjs/tailwindcss": "6.13.1",
     "@tavily/core": "^0.3.1",
+    "@uiw/codemirror-theme-okaidia": "^4.23.8",
     "@vueuse/nuxt": "12.7.0",
     "ai": "^4.1.45",
     "consola": "^3.4.0",
     "langchain": "^0.3.19",
     "nuxt": "^3.15.4",
+    "nuxt-codemirror": "0.0.12",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.1.0",
     "vue": "latest",
