Use the transitions from morev/vue-transitions

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@langchain/community": "^0.3.31",
     "@langchain/core": "^0.3.40",
     "@langchain/langgraph": "^0.2.46",
+    "@morev/vue-transitions": "^3.0.5",
     "@nuxt/icon": "1.10.3",
     "@nuxt/ui": "2.21.0",
     "@nuxtjs/color-mode": "3.5.2",
@@ -50,5 +51,10 @@
     "eslint-plugin-format": "^1.0.1",
     "langsmith": "^0.3.10",
     "nuxi": "^3.21.1"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@morev/vue-transitions"
+    ]
   }
 }
