--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "uuid": "^11.1.0",
     "vue": "latest",
     "vue-router": "latest",
+    "vue3-smooth-dnd": "^0.0.6",
     "zod": "^3.24.2",
     "zod-to-json-schema": "^3.24.2"
   },
