--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "consola": "^3.4.0",
     "langchain": "^0.3.19",
     "nuxt": "^3.15.4",
+    "nuxt-aos": "1.2.5",
     "nuxt-codemirror": "0.0.12",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.1.0",
