--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@uiw/codemirror-theme-okaidia": "^4.23.8",
     "@vueuse/nuxt": "12.7.0",
     "ai": "^4.1.45",
+    "aos": "^2.3.4",
     "consola": "^3.4.0",
     "langchain": "^0.3.19",
     "nuxt": "^3.15.4",
