--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@langchain/langgraph-checkpoint-postgres": "^0.0.4",
     "@morev/vue-transitions": "^3.0.5",
     "@nuxt/icon": "1.10.3",
-    "@nuxt/ui": "2.21.0",
+    "@nuxt/ui": "3.0.0-beta.2",
     "@nuxtjs/color-mode": "3.5.2",
     "@nuxtjs/tailwindcss": "6.13.1",
     "@tavily/core": "^0.3.1",
