--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@nuxt/icon": "1.10.3",
     "@nuxt/ui": "3.0.0-beta.2",
     "@nuxtjs/color-mode": "3.5.2",
+    "@tailwindcss/postcss": "^4.0.9",
+    "@tailwindcss/vite": "^4.0.9",
     "@tavily/core": "^0.3.1",
     "@uiw/codemirror-theme-okaidia": "^4.23.8",
     "@vueuse/motion": "^2.2.6",
@@ -33,6 +35,7 @@
     "langchain": "^0.3.19",
     "nuxt": "^3.15.4",
     "nuxt-codemirror": "0.0.12",
+    "postcss": "^8.5.3",
     "tailwindcss": "^4.0.9",
     "uuid": "^11.1.0",
     "vue": "latest",
