--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@langchain/langgraph-checkpoint-postgres": "^0.0.4",
     "@morev/vue-transitions": "^3.0.5",
     "@nuxt/icon": "1.10.3",
+    "@nuxt/image": "1.9.0",
     "@nuxt/ui": "3.0.0-beta.2",
     "@nuxtjs/color-mode": "3.5.2",
     "@tailwindcss/postcss": "^4.0.9",
@@ -64,6 +65,5 @@
   },
   "overrides": {
     "@nuxt/devtools": "^2.1.1"
-
   }
 }
