--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vueuse/nuxt": "12.7.0",
     "ai": "^4.1.45",
     "consola": "^3.4.0",
+    "ipx": "^3.0.1",
     "langchain": "^0.3.19",
     "nuxt": "^3.15.4",
     "nuxt-codemirror": "0.0.12",
