--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "langchain": "^0.3.19",
     "nuxt": "^3.15.4",
     "nuxt-codemirror": "0.0.12",
+    "nuxt-marquee": "1.0.4",
     "pinia": "^3.0.1",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.9",
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^4.4.0",
     "@iconify-json/mdi": "^1.2.3",
+    "@iconify-json/simple-icons": "^1.2.27",
     "@nuxt/devtools": "^2.1.3",
     "@tailwindcss/typography": "^0.5.16",
     "eslint": "^9.20.1",
